--- a/packages/flutter_background_service_android/pubspec.yaml
+++ b/packages/flutter_background_service_android/pubspec.yaml
@@ -11,7 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_background_service_platform_interface: ^1.0.2
+  flutter_background_service_platform_interface:
+    git:
+      url: https://github.com/RobluScouting/flutter_background_service.git
+      path: packages/flutter_background_service_platform_interface
+      ref: master
 dev_dependencies:
   flutter_test:
     sdk: flutter
