--- a/packages/flutter_background_service/pubspec.yaml
+++ b/packages/flutter_background_service/pubspec.yaml
@@ -11,9 +11,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_background_service_platform_interface: ^1.0.2
-  flutter_background_service_android: ^1.0.2
-  flutter_background_service_ios: ^1.0.2
+  flutter_background_service_platform_interface:
+    git:
+      url: https://github.com/RobluScouting/flutter_background_service.git
+      path: packages/flutter_background_service_platform_interface
+      ref: master
+  flutter_background_service_android:
+    git:
+      url: https://github.com/RobluScouting/flutter_background_service.git
+      path: packages/flutter_background_service_android
+      ref: master
+  flutter_background_service_ios:
+    git:
+      url: https://github.com/RobluScouting/flutter_background_service.git
+      path: packages/flutter_background_service_ios
+      ref: master
 dev_dependencies:
   flutter_test:
     sdk: flutter
